--- a/frontend/src/UI/Components/feedPost/feedPost.css
+++ b/frontend/src/UI/Components/feedPost/feedPost.css
@@ -1,7 +1,61 @@
-.feedPost_main{
-    display: flex;
-    border: 5px solid #000000;
-    height: 500px;
-    width: 50% !important;
+/* Main Feed Container */
+.feed {
+    width: 100%;
+    max-width: 600px;
+    margin: 0 auto;
+    background-color: #fff;
+    border: 1px solid #dddfe2;
+    border-radius: 12px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+    padding: 24px;
+    margin-top: 24px;
+    box-sizing: border-box;
+    margin-bottom: 1.5%;
+}
 
+/* Adjust Feed Post Form */
+form {
+    display: flex;
+    flex-direction: column;
+}
+
+/* Adjust Feed Post Image and Buttons Container */
+.feedPost_image_buttons {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
+/* Adjust Text Input for Feed Post */
+.text_feedPost {
+    border: 1px solid #dddfe2;
+    outline: none;
+    padding: 16px;
+    font-size: 18px;
+    border-radius: 12px;
+    margin-bottom: 16px;
+    box-sizing: border-box;
+    flex: 1;
+    /* Take up remaining space */
+}
+
+/* Adjust Feed Post Buttons */
+.feedPost_buttons {
+    width: 30%;
+    display: flex;
+    justify-content: flex-end;
+    /* Align to the right */
+}
+
+/* Hover effect for Post Button */
+.btn-primary:hover {
+    background-color: #14549e;
+}
+
+/* Responsive Design */
+@media (max-width: 768px) {
+    .feed {
+        margin: 0 24px;
+    }
 }
