--- a/frontend/src/UI/Pages/HomePage/HomePage.css
+++ b/frontend/src/UI/Pages/HomePage/HomePage.css
@@ -1,11 +1,14 @@
-
+body,
+html {
+    overflow-x: hidden;
+}
 
 /* Style for the main feed container */
 .feedReel {
     display: flex;
     flex-direction: column;
-    width: 90%;
-    max-width: 500px;
+    width: 100%;
+    max-width: 590px;
     margin: 0 auto;
 }
 
@@ -45,4 +48,28 @@
 /* Optional: Hover effect for posts */
 .perReel:hover {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+/* Style for the delete button */
+.postOptions {
+    display: flex;
+    justify-content: flex-end;
+    /* Align items to the right */
+}
+
+.postOptions button {
+    background-color: #f44336;
+    color: white;
+    border: none;
+    padding: 8px 16px;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-left: 8px;
+}
+
+/* Hover effect for the delete button */
+.postOptions button:hover {
+    background-color: #da190b;
 }
