fixed the bugs but if my app still has bugs please help me to make it perfect

--- a/frontend/src/UI/Components/Comment/comment.css
+++ b/frontend/src/UI/Components/Comment/comment.css
@@ -28,7 +28,7 @@
   
   .delete-comment-btn {
     position: absolute;
-    top: 5px;
+    bottom: 5px;
     right: 5px;
     padding: 5px 10px;
     background-color: #ff5555;
